--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      java: corretto11
+    commands:
+      - echo Install started on `date`
   pre_build:
     commands:
       - echo pre_build phase Installing Corretto 17
