--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
     commands:
       - echo pre_build phase Installing Corretto 17
       - yum install java-17-amazon-corretto-devel -y
+      - alternatives --list
       - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.aarch64/bin/java
       - echo `java -version`
   build:
