--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,9 @@ phases:
   pre_build:
     commands:
       - echo pre_build phase Installing Corretto 17
+      - ls -l /usr/lib/jvm
       - yum install java-17-amazon-corretto-devel -y
-      - alternatives --list
+      - alternatives --list java
       - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.aarch64/bin/java
       - echo `java -version`
   build:
