--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,8 @@ phases:
       - ls -l /usr/lib/jvm
       - yum install java-17-amazon-corretto-devel -y
       - alternatives --list java
-      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.aarch64/bin/java
+      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/java
+      - alternatives --set javac /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/javac
       - echo `java -version`
   build:
     commands:
