feat: first cut

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
+
+apply from: 'common.gradle'
 
 java {
 	sourceCompatibility = '17'
