--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,17 +2,20 @@ version: 0.2
 
 phases:
   install:
-    commands:
-      - echo Install started on `date`
+    runtime-versions:
+      java: corretto17
+#    commands:
+#      - echo Install started on `date`
   pre_build:
     commands:
       - echo pre_build phase Installing Corretto 17
+      - echo `java -version`
       - ls -l /usr/lib/jvm
 #      - yum install java-17-amazon-corretto-devel -y
 #      - alternatives --list java
-      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/java
-      - alternatives --set javac /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/javac
-      - echo `java -version`
+#      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/java
+#      - alternatives --set javac /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/javac
+#      - echo `java -version`
   build:
     commands:
       - echo Build started on `date`
