--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,18 +4,12 @@ phases:
   install:
     runtime-versions:
       java: corretto17
-#    commands:
-#      - echo Install started on `date`
+    commands:
+      - echo install phase
   pre_build:
     commands:
-      - echo pre_build phase Installing Corretto 17
+      - echo pre_build phase
       - echo `java -version`
-      - ls -l /usr/lib/jvm
-#      - yum install java-17-amazon-corretto-devel -y
-#      - alternatives --list java
-#      - alternatives --set java /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/java
-#      - alternatives --set javac /usr/lib/jvm/java-17-amazon-corretto.x86_64/bin/javac
-#      - echo `java -version`
   build:
     commands:
       - echo Build started on `date`
@@ -23,6 +17,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+      - ls -l build/libs
 artifacts:
   files:
     - build/libs/pk-demo-codebuild-0.0.1-SNAPSHOT.jar
