feat: first cut

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+	repositories {
+		maven {
+			url 'https://pk-demo-515656444959.d.codeartifact.ap-southeast-2.amazonaws.com/maven/pk-demo-artfacts/'
+			credentials {
+				username "aws"
+				password System.env.CODEARTIFACT_AUTH_TOKEN
+			}
+		}
+	}
+
+}
 
 plugins {
 	id 'java'
@@ -11,8 +23,8 @@ java {
 	sourceCompatibility = '17'
 }
 
-repositories {
-	mavenCentral()
+jar {
+	enabled = false
 }
 
 dependencies {
