--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
     commands:
       - echo pre_build phase
       - echo `java -version`
+      - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain pk-demo --domain-owner 515656444959 --region ap-southeast-2 --query authorizationToken --output text`
   build:
     commands:
       - echo Build started on `date`
@@ -17,7 +18,6 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - ls -l build/libs
 artifacts:
   files:
     - build/libs/pk-demo-codebuild-0.0.1-SNAPSHOT.jar
