--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'maven-publish'
 }
 
 apply from: 'common.gradle'
