--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+/*
 buildscript {
 	repositories {
 		maven {
@@ -7,15 +8,19 @@ buildscript {
 				password System.env.CODEARTIFACT_AUTH_TOKEN
 			}
 		}
+		mavenCentral()
 	}
 
 }
-
+*/
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'maven-publish'
+}
+repositories {
+	mavenCentral()
 }
 
 apply from: 'common.gradle'
