feat: first cut

--- a/common.gradle
+++ b/common.gradle
@@ -1,11 +1,11 @@
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        bootJava(MavenPublication) {
+            artifact tasks.named("bootJar")
             groupId = "${group}"
             artifactId = "${rootProject.name}"
             version = "${version}"
-            from components.java
         }
     }
     repositories {
