--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ./gradlew build
+      - ./gradlew build publish
   post_build:
     commands:
       - echo Build completed on `date`
